[gd_scene load_steps=9 format=3 uid="uid://ctf223bfl03re"]

[ext_resource type="Script" path="res://scenes/ui/controls/controls.gd" id="1_j1n2y"]
[ext_resource type="Texture2D" uid="uid://bucefoly7h17l" path="res://assets/ui/controls/gauge.svg" id="2_otwex"]
[ext_resource type="Texture2D" uid="uid://c4kyxg83ufyk2" path="res://assets/ui/controls/gauge_rod.svg" id="3_ighnp"]
[ext_resource type="PackedScene" uid="uid://dyouiu2v1fxdk" path="res://scenes/ui/controls/slider.tscn" id="4_oixhg"]
[ext_resource type="PackedScene" uid="uid://ic5jkh8l6x7q" path="res://scenes/ui/controls/shifter.tscn" id="5_bjgkx"]
[ext_resource type="PackedScene" uid="uid://b77lwmlc0ot4u" path="res://scenes/ui/controls/start_slider.tscn" id="6_njgng"]
[ext_resource type="PackedScene" uid="uid://c4hybymxiqfog" path="res://scenes/ui/controls/hand_brake.tscn" id="7_lvu6n"]
[ext_resource type="Script" path="res://scenes/ui/controls/graph.gd" id="8_14hdf"]

[node name="Controls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1n2y")

[node name="Gauge" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -246.0
offset_right = 220.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_otwex")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Gauge"]
custom_minimum_size = Vector2(416, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -71.0
offset_right = 102.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="KmphLabel" type="Label" parent="Gauge/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.337255, 0.337255, 0.337255, 1)
text = "KMPH"
horizontal_alignment = 1

[node name="RpmLabel" type="Label" parent="Gauge/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.372549, 0.372549, 0.372549, 1)
text = "RPM"
horizontal_alignment = 1

[node name="RPM" type="TextureRect" parent="Gauge"]
layout_mode = 1
offset_left = 305.0
offset_top = 27.0
offset_right = 345.0
offset_bottom = 135.0
pivot_offset = Vector2(20, 88)
texture = ExtResource("3_ighnp")

[node name="Speed" type="TextureRect" parent="Gauge"]
layout_mode = 0
offset_left = 95.0
offset_top = 27.0
offset_right = 135.0
offset_bottom = 135.0
pivot_offset = Vector2(20, 88)
texture = ExtResource("3_ighnp")

[node name="BrakePedal" parent="." instance=ExtResource("4_oixhg")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -233.0
offset_right = -287.0
offset_bottom = -233.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
label = "BRAKE"

[node name="AccePedal" parent="." instance=ExtResource("4_oixhg")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -249.0
offset_right = -102.0
offset_bottom = -249.0
grow_horizontal = 0
grow_vertical = 0
label = "ACCEL"

[node name="ClutchPedal" parent="." instance=ExtResource("4_oixhg")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 416.0
offset_top = -230.0
offset_right = 416.0
offset_bottom = -230.0
grow_vertical = 0
spring = false
label = "CLUTCH"

[node name="Shifter" parent="." instance=ExtResource("5_bjgkx")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 171.0
offset_top = -187.0
offset_right = 171.0
offset_bottom = -187.0
grow_vertical = 0

[node name="IgnitionSlider" parent="." instance=ExtResource("6_njgng")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -223.0
offset_top = 79.0
offset_right = -223.0
offset_bottom = 79.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="HandBrake" parent="." instance=ExtResource("7_lvu6n")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -436.0
offset_top = -206.0
offset_right = -436.0
offset_bottom = -206.0
grow_horizontal = 0
grow_vertical = 0

[node name="Graphs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 36.0
offset_top = 35.0
offset_right = 226.0
offset_bottom = 291.0
script = ExtResource("8_14hdf")

[node name="Legends" type="RichTextLabel" parent="Graphs"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_right = 149.0
grow_vertical = 0
theme_override_colors/default_color = Color(0.545098, 0.545098, 0.545098, 1)
bbcode_enabled = true
text = "[color=#fe4850]━[/color]  Engine RPM
[color=#50fe50]━[/color]  Target RPM
[color=#4a80fe]━[/color]  Speed "
scroll_active = false
text_direction = 1

[node name="DebugText" type="RichTextLabel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.772549)
layout_mode = 0
offset_left = 240.0
offset_top = 13.0
offset_right = 541.0
offset_bottom = 533.0
bbcode_enabled = true
text = "Debug Values"
scroll_active = false

[node name="FPSCounter" type="RichTextLabel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.772549)
layout_mode = 0
offset_left = 36.0
offset_top = 9.0
offset_right = 132.0
offset_bottom = 35.0
bbcode_enabled = true
text = "FPS: "
scroll_active = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Sounds" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
